Licensing/WinLicenseSDK/Include/C/WinlicenseSDK.h

// ***********************************************
// WinLicense typedef definitions
// ***********************************************

typedef struct _sLicenseFeatures 
{ 
    unsigned    cb;                     // size of struct
    unsigned    NumDays;                // expiration days
    unsigned    NumExec;                // expiration executions
    SYSTEMTIME  ExpDate;                // expiration date 
    unsigned    CountryId;              // country ID
    unsigned    Runtime;                // expiration runtime
    unsigned    GlobalMinutes;          // global time expiration
    SYSTEMTIME  InstallDate;            // Date to install the license since it was created
    unsigned    NetInstances;           // Network instances 
    unsigned    EmbedLicenseInfoInKey;  // for Dynamic SmartKeys, it embeds Name+Company+Custom inside generated SmartKey
    unsigned    EmbedCreationDate;      // Embed the date that the key was created
} sLicenseFeatures;
int STDCALL_CONVENTION WLRegGetStatus(int* pExtendedInfo);
int STDCALL_CONVENTION WLTrialGetStatus(int* pExtendedInfo);
int STDCALL_CONVENTION WLTrialExtGetStatus(void);
BOOL STDCALL_CONVENTION WLRegGetLicenseInfo(char* pName, char* pCompanyName, char* pCustomData);
BOOL STDCALL_CONVENTION WLRegGetLicenseInfoW(wchar_t* pName, wchar_t* pCompanyName, wchar_t* pCustomData);
int STDCALL_CONVENTION WLTrialTotalDays(void);
int STDCALL_CONVENTION WLTrialTotalExecutions(void);
int STDCALL_CONVENTION WLTrialDaysLeft(void);
int STDCALL_CONVENTION WLTrialExecutionsLeft(void);
int STDCALL_CONVENTION WLTrialExpirationDate(SYSTEMTIME* pExpDate);
int STDCALL_CONVENTION WLTrialGlobalTimeLeft(void);
int STDCALL_CONVENTION WLTrialRuntimeLeft(void);
int STDCALL_CONVENTION WLTrialLockedCountry(void);
int STDCALL_CONVENTION WLRegDaysLeft(void);
int STDCALL_CONVENTION WLRegExecutionsLeft(void);
int STDCALL_CONVENTION WLRegExpirationDate(SYSTEMTIME* pExpDate);
BOOL STDCALL_CONVENTION WLRegLicenseCreationDate(SYSTEMTIME* pCreationDate);
BOOL STDCALL_CONVENTION WLRegSmartKeyCheck(const char* UserName, const char* Organization, const char* Custom, const char* AsciiKey);
BOOL STDCALL_CONVENTION WLRegSmartKeyCheckW(const wchar_t* UserName, const wchar_t* Organization, const wchar_t* Custom,\
                                   const wchar_t* AsciiKey);
BOOL STDCALL_CONVENTION WLRegNormalKeyCheck(const char* AsciiKey);
BOOL STDCALL_CONVENTION WLRegNormalKeyCheckW(const wchar_t* AsciiKey);
BOOL STDCALL_CONVENTION WLRegNormalKeyInstallToFile(const char* AsciiKey);
BOOL STDCALL_CONVENTION WLRegNormalKeyInstallToFileW(const wchar_t* AsciiKey);
BOOL STDCALL_CONVENTION WLRegNormalKeyInstallToRegistry(const char* AsciiKey);
BOOL STDCALL_CONVENTION WLRegNormalKeyInstallToRegistryW(const wchar_t* AsciiKey);
BOOL STDCALL_CONVENTION WLRegSmartKeyInstallToFile(const char* UserName, const char* Organization, const char* Custom,\
                                          const char* AsciiKey);
BOOL STDCALL_CONVENTION WLRegSmartKeyInstallToFileW(const wchar_t* UserName, const wchar_t* Organization, const wchar_t* Custom,\
                                            const wchar_t* AsciiKey);
int STDCALL_CONVENTION WLTrialCustomCounterInc(int Value, int CounterId);
int STDCALL_CONVENTION WLTrialCustomCounterDec(int Value, int CounterId);
int STDCALL_CONVENTION WLTrialCustomCounter(int CounterId);
int STDCALL_CONVENTION WLTrialCustomCounterSet(int Value, int CounterId);
int STDCALL_CONVENTION WLRegLockedCountry(void);
int STDCALL_CONVENTION WLRegRuntimeLeft(void);
int STDCALL_CONVENTION WLRegGlobalTimeLeft(void);
BOOL STDCALL_CONVENTION WLRegDisableCurrentKey(int DisableFlags);
BOOL STDCALL_CONVENTION WLRegRemoveCurrentKey(void);
BOOL STDCALL_CONVENTION WLTrialExpireTrial(void);
void STDCALL_CONVENTION WLRegLicenseName(char* FileKeyName, char* RegKeyName, char* RegKeyValueName);
BOOL STDCALL_CONVENTION WLRegGetLicenseHardwareID(char* pHardwareId);
int STDCALL_CONVENTION WLTrialExtGetLevel(void);
BOOL STDCALL_CONVENTION  WLTrialExtendExpiration(int NumDays, int NumExec, SYSTEMTIME* NewDate, int Runtime, int GlobalMinutes);
BOOL STDCALL_CONVENTION WLTrialFirstRun(void);
BOOL STDCALL_CONVENTION WLRegFirstRun(void);
BOOL STDCALL_CONVENTION WLRegCheckMachineLocked(void);
BOOL STDCALL_CONVENTION WLRegSmartKeyInstallToFileInFolder(const char* UserName, const char* Organization, const char* Custom,\
                                                  const char* AsciiKey, const char* FilePath);
int STDCALL_CONVENTION WLTrialDateDaysLeft(void);
int STDCALL_CONVENTION WLRegDateDaysLeft(void);
BOOL STDCALL_CONVENTION WLRegGetDynSmartKey(char* SmartKey);
BOOL STDCALL_CONVENTION WLRegDisableKeyCurrentInstance(void);
int STDCALL_CONVENTION WLRegNetInstancesGet(void);
int STDCALL_CONVENTION WLRegNetInstancesMax(void);
BOOL STDCALL_CONVENTION WLTrialStringRead(const char *StringName, char *StringValue);
BOOL STDCALL_CONVENTION WLTrialStringReadW(const wchar_t *StringName, wchar_t *StringValue);
BOOL STDCALL_CONVENTION WLTrialStringWrite(const char *StringName, const char *StringValue);
BOOL STDCALL_CONVENTION WLTrialStringWriteW(const wchar_t *StringName, const wchar_t *StringValue);
BOOL STDCALL_CONVENTION WLTrialDebugCheck(void);
BOOL STDCALL_CONVENTION WLRegExpirationTimestamp(LPFILETIME lpFileTime);
BOOL STDCALL_CONVENTION WLTrialExpirationTimestamp(LPFILETIME lpFileTime);
int STDCALL_CONVENTION WLRegGetLicenseRestrictions(void);
int STDCALL_CONVENTION WLRegGetLicenseType(void);
int STDCALL_CONVENTION WLTrialGetTrialRestrictions(void);
int STDCALL_CONVENTION WLRegActivateSoftware(char *pActivationKey, int *OutWinsockErrorCode,
                                             char *OutServerOutput, int SizeServerOutput);
int STDCALL_CONVENTION WLRegDeactivateSoftware(char *pActivationKey, int *OutWinsockErrorCode,
                                             char *OutServerOutput, int SizeServerOutput);